@@ -1,3 +1,10 @@
+2006-08-08  Gabor Csardi  <csardi@rmki.kfki.hu>
+
+	* interfaces/R/igraph/R/foreign.R (read.graph.graphml) : removed 
+	'directed' attribute
+	* interfaces/R/src/rinterface.c (R_igraph_read_graph_graphml) :
+	remove 'directed' attribute
+
 2006-08-07  Gabor Csardi  <csardi@rmki.kfki.hu>
 
 	* interfaces/R/igraph/R/foreign.R (read.graph, write.graph) :
